<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">

    <ImageView 
        android:id="@+id/titlescreen_image"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:src="@drawable/login">
    </ImageView>

    
    <LinearLayout
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
    
        <!-- Player's Name -->
        <LinearLayout
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/login_textview_username"
                android:text="@string/login_textview_username"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            
            <EditText android:id="@+id/login_edittext_username"
                android:hint = "@string/login_edittext_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
            />
        </LinearLayout>
        
        <!-- Player's Password -->
        <LinearLayout
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/login_textview_password"
                android:text="@string/login_textview_password"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            
            <EditText android:id="@+id/login_edittext_password"
                android:hint = "@string/login_edittext_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
            />
        </LinearLayout>
        
        <!-- Create and Login buttons -->
        <LinearLayout
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <Button 
                android:id="@+id/login_button_ok"
                android:text="@string/login_button_ok"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            </Button>
        </LinearLayout>
    </LinearLayout>
    
</RelativeLayout>
