<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    >
<LinearLayout 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    
    <!-- Catagory Select -->
        <!-- Config opponent's net connection. -->
        <TextView
            android:id="@+id/submit_textview_selectcatagory"
            android:text="@string/submit_textview_selectcatagory"
            android:textSize="20px"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        />
        
        <LinearLayout
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            
            <!--
            <TextView
                android:id="@+id/connect_to_ip_prompt"
                android:text="@string/connect_to_ip_prompt_text"
                android:textSize="18px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            
            <EditText 
                android:id="@+id/connect_to_ip_editbox"
                android:hint = "@string/connect_to_ip_editbox_hinttext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
            />
            -->
            
        </LinearLayout>
    <!-- /Catagory Select -->
    
    <!-- Divider -->
    <ImageView
        android:id="@+id/separator_catagoryselect_photopreview"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/divider"
    />
    
    <!-- Photo Preview -->
        <TextView
            android:id="@+id/submit_textview_photopreview"
            android:text="@string/submit_textview_photopreview"
            android:textSize="20px"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        />
        
        <ImageView
            android:id="@+id/submit_imageview_photopreview"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/submit_imageview_photopreview"
        />
    <!-- /Photo Preview -->
    
    <!-- Divider -->
    <ImageView
        android:id="@+id/separator_photopreview_submitbutton"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/divider"
    />
    
    <!-- Buttons -->
        <LinearLayout
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button 
                android:id="@+id/submit_button_cancelbutton"
                android:text="@string/submit_button_cancelbutton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18px"
                android:layout_weight="1"
            />
            <Button 
                android:id="@+id/submit_button_submitbutton"
                android:text="@string/submit_button_submitbutton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18px"
                android:layout_weight="1"
            />
        </LinearLayout>
    <!-- /Buttons -->
    
</LinearLayout>
</ScrollView>
